New end point for evaluation statistics, in progress
